codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__question_vim_other.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "format!(\"NORMAL\\n{normal}\\n\\nSEARCH\\n{search}\")"
---
NORMAL
• Queued follow-up inputs

  Which way?

    1. Named
  › 2. alpha beta
       alpha gamma
                                                                   Vim: Normal
  enter submit   ctrl + ] skip   ⌥ + ↓ / shift + → main prompt

SEARCH
• Queued follow-up inputs

  Which way?

    1. Named
  › 2. alpha beta
       alpha gamma
       /gamma
                                                                   Vim: Normal
  enter submit   ctrl + ] skip   ⌥ + ↓ / shift + → main prompt
